--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js && parcel ./Blockly/index.html"
+    "start": "node server.js"
   },
 
   "dependencies": {
